--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,9 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseURL: 'https://example.com/' # Website URL
+title: Adeel Ahmad # Website name
+baseurl: 'https://adeel.rbind.io' # Website URL
+copyright: '© {year} Me' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
@@ -67,5 +68,4 @@ related:
       weight: 70
 security:
   _merge: deep
-sitemap:
-  _merge: deep
+  
